@@ -1,14 +1,15 @@
 package me.alpha432.oyvey.features.gui;
 
 import me.alpha432.oyvey.features.modules.combat.TargetType;
+
 import net.fabricmc.api.EnvType;
 import net.fabricmc.api.Environment;
+
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.GuiGraphics;
-import net.minecraft.network.chat.Text;
+import net.minecraft.network.chat.Component;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Environment(EnvType.CLIENT)
 public class KillauraEntitySelectorGUI {
@@ -18,52 +19,63 @@ public class KillauraEntitySelectorGUI {
     private final Minecraft mc = Minecraft.getInstance();
 
     public KillauraEntitySelectorGUI() {
-        for (TargetType type : TargetType.values()) {
-            targetToggles.put(type, type == TargetType.PLAYER); // Default: only players
+        for (TargetType t : TargetType.values()) {
+            targetToggles.put(t, t == TargetType.PLAYER); // Default: only player
         }
     }
 
-    public void setSearchQuery(String query) {
-        this.searchQuery = query.toLowerCase();
+    public void setSearchQuery(String q) {
+        this.searchQuery = q.toLowerCase();
     }
 
-    public void toggle(TargetType type) {
-        targetToggles.put(type, !targetToggles.get(type));
+    public void toggle(TargetType t) {
+        targetToggles.put(t, !targetToggles.get(t));
     }
 
-    public boolean isEnabled(TargetType type) {
-        return targetToggles.getOrDefault(type, false);
+    public boolean isEnabled(TargetType t) {
+        return targetToggles.getOrDefault(t, false);
     }
 
     public List<TargetType> getVisibleTargets() {
         return Arrays.stream(TargetType.values())
                 .filter(t -> t.name().toLowerCase().contains(searchQuery))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    /**
-     * Renders the GUI using GuiGraphics (new in 1.20+ / 1.21.5)
-     */
     public void render(GuiGraphics graphics, int mouseX, int mouseY) {
         int y = 20;
 
-        // Draw search query
-        graphics.drawString(mc.font, Text.literal("Search: " + searchQuery), 10, 10, 0xFFFFFF, false);
+        // Title / Search
+        graphics.drawString(
+                mc.font,
+                Component.literal("Search: " + searchQuery),
+                10,
+                10,
+                0xFFFFFF,
+                false
+        );
 
-        // Draw each target toggle
+        // Render toggles
         for (TargetType type : getVisibleTargets()) {
             boolean enabled = isEnabled(type);
             String label = (enabled ? "[X] " : "[ ] ") + type.name();
-            graphics.drawString(mc.font, Text.literal(label), 10, y, 0xFFFFFF, false);
+
+            graphics.drawString(
+                    mc.font,
+                    Component.literal(label),
+                    10,
+                    y,
+                    0xFFFFFF,
+                    false
+            );
+
             y += 12;
         }
     }
 
-    /**
-     * Handles click events on the GUI toggles
-     */
     public void handleClick(double mouseX, double mouseY) {
         int y = 20;
+
         for (TargetType type : getVisibleTargets()) {
             if (mouseX >= 10 && mouseX <= 110 && mouseY >= y && mouseY <= y + 10) {
                 toggle(type);
